--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,6 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "4.5.8", features = ["derive"] }
+ctrlc = "3.4.4"
 image = "0.25.1"
-term_size = "0.3.2"
+termion = "4.0.2"
