Add gif examples to readme.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,13 @@
 [package]
 name = "uniart"
-version = "0.1.0"
+version = "1.0.0"
 edition = "2021"
+authors = ["Gabriel Myszkier <myszkier.gabriel@gmail.com>"]
+description = "A CLI tool to convert images and gifs to terminal characters."
+license = "MIT OR Apache-2.0"
+repository = "https://github.com/gre-v-el/uniart"
+keywords = ["unicode", "ascii", "art", "cli", "terminal"]
+
 
 [dependencies]
 clap = { version = "4.5.8", features = ["derive"] }
