--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,6 @@ keywords = ["unicode", "ascii", "art", "cli", "terminal"]
 
 [dependencies]
 clap = { version = "4.5.8", features = ["derive"] }
+crossterm = "0.27.0"
 ctrlc = "3.4.4"
 image = "0.25.1"
-termion = "4.0.2"
